--- a/back-end/package.json
+++ b/back-end/package.json
@@ -22,6 +22,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/multer": "^1.4.7",
     "nodemon": "^2.0.22",
     "sucrase": "^3.31.0",
     "ts-node": "^10.9.1",
