--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon ./src/index.ts"
+    "start": "node ./src/index.ts"
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
